--- a/index.html
+++ b/index.html
@@ -3,12 +3,32 @@
 
 <head>
      <meta charset="utf-8">
-     <title>АО «Почта России»</title>
+     <title>Мой первый сайт</title>
 
 </head>
 
 <body>
-     <p> Тел.: +7 (495) 956-20-67</p>
+  <header>
+    <div>app.creation</div>
+    <nav>
+      <a href="www.google.com">start</a>
+      <a href="www.google.com">services</a>
+      <a href="www.google.com">about</a>
+      <a href="www.google.com">blog</a>
+      <a href="www.google.com">contact us</a>
+    </nav>
+  </header>
+
+    <section>
+      <main>
+        <h1>Building an App Without Design Expertise?</h1>
+        <p>I help tech startups design better digital products without hiring a full-time designer</p>
+        <button type="www.google.com" name="www.google.com">Schedule free consultation</button>
+      </main>
+      <div>
+        <img>
+      </div>
+    </section>
 </body>
 
 </html>
