--- a/index.html
+++ b/index.html
@@ -3,32 +3,12 @@
 
 <head>
      <meta charset="utf-8">
-     <title>Мой первый сайт</title>
+     <title>АО «Почта России»</title>
 
 </head>
 
 <body>
-  <header>
-    <div>app.creation</div>
-    <nav>
-      <a href="www.google.com">start</a>
-      <a href="www.google.com">services</a>
-      <a href="www.google.com">about</a>
-      <a href="www.google.com">blog</a>
-      <a href="www.google.com">contact us</a>
-    </nav>
-  </header>
-
-    <section>
-      <main>
-        <h1>Building an App Without Design Expertise?</h1>
-        <p>I help tech startups design better digital products without hiring a full-time designer</p>
-        <button type="www.google.com" name="www.google.com">Schedule free consultation</button>
-      </main>
-      <div>
-        <img>
-      </div>
-    </section>
+     <p> Тел.: +7 (495) 956-20-67</p>
 </body>
 
 </html>
